docs/api/qiskit/0.19/qiskit.circuit.library.RYGate.mdx
---
title: RYGate (v0.19)
description: API reference for qiskit.circuit.library.RYGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RYGate
---

# RYGate

<Class id="qiskit.circuit.library.RYGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/ry.py" signature="RYGate(theta, label=None)" modifiers="class">
  Single-qubit rotation about the Y axis.

  **Circuit symbol:**

  ```python
       ┌───────┐
  q_0: ┤ Ry(ϴ) ├
       └───────┘
  ```

  **Matrix Representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}RY(\theta) = exp(-i \th Y) =
\begin{pmatrix}
\cos{\th} & -\sin{\th} \\
\sin{\th} & \cos{\th}
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  Create new RY gate.

  ## Attributes

  <span id="rygate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.RYGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="rygate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.RYGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="rygate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.RYGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="rygate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.RYGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="rygate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.RYGate.add_decomposition" signature="RYGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="rygate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.RYGate.assemble" signature="RYGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="rygate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.RYGate.broadcast_arguments" signature="RYGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="rygate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.RYGate.c_if" signature="RYGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="rygate-control" />

  ### control

  <Function id="qiskit.circuit.library.RYGate.control" signature="RYGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-RY gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="rygate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.RYGate.copy" signature="RYGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rygate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.RYGate.inverse" signature="RYGate.inverse()">
    Return inverted RY gate.

    $RY(\lambda){\dagger} = RY(-\lambda)$
  </Function>

  <span id="rygate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.RYGate.is_parameterized" signature="RYGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="rygate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.RYGate.mirror" signature="RYGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rygate-power" />

  ### power

  <Function id="qiskit.circuit.library.RYGate.power" signature="RYGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="rygate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.RYGate.qasm" signature="RYGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="rygate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.RYGate.repeat" signature="RYGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="rygate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.RYGate.to_matrix" signature="RYGate.to_matrix()">
    Return a numpy.array for the RY gate.
  </Function>
</Class>

